tests/rosetta/transpiler/Kotlin/ackermann-function.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:12:59: error: expecting ','
    println("A(0, 0) = " + ackermann(0, 0) as Int.toString())
                                                          ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:12:60: error: expecting an expression
    println("A(0, 0) = " + ackermann(0, 0) as Int.toString())
                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:13:59: error: expecting ','
    println("A(1, 2) = " + ackermann(1, 2) as Int.toString())
                                                          ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:13:60: error: expecting an expression
    println("A(1, 2) = " + ackermann(1, 2) as Int.toString())
                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:14:59: error: expecting ','
    println("A(2, 4) = " + ackermann(2, 4) as Int.toString())
                                                          ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:14:60: error: expecting an expression
    println("A(2, 4) = " + ackermann(2, 4) as Int.toString())
                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:15:59: error: expecting ','
    println("A(3, 4) = " + ackermann(3, 4) as Int.toString())
                                                          ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:15:60: error: expecting an expression
    println("A(3, 4) = " + ackermann(3, 4) as Int.toString())
                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:12:5: error: none of the following functions can be called with the arguments supplied: 
@InlineOnly public inline fun println(): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Any?): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Boolean): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Byte): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Char): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: CharArray): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Double): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Float): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Int): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Long): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Short): Unit defined in kotlin.io
    println("A(0, 0) = " + ackermann(0, 0) as Int.toString())
    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:12:51: error: unresolved reference: toString
    println("A(0, 0) = " + ackermann(0, 0) as Int.toString())
                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:13:5: error: none of the following functions can be called with the arguments supplied: 
@InlineOnly public inline fun println(): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Any?): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Boolean): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Byte): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Char): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: CharArray): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Double): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Float): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Int): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Long): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Short): Unit defined in kotlin.io
    println("A(1, 2) = " + ackermann(1, 2) as Int.toString())
    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:13:51: error: unresolved reference: toString
    println("A(1, 2) = " + ackermann(1, 2) as Int.toString())
                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:14:5: error: none of the following functions can be called with the arguments supplied: 
@InlineOnly public inline fun println(): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Any?): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Boolean): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Byte): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Char): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: CharArray): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Double): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Float): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Int): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Long): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Short): Unit defined in kotlin.io
    println("A(2, 4) = " + ackermann(2, 4) as Int.toString())
    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:14:51: error: unresolved reference: toString
    println("A(2, 4) = " + ackermann(2, 4) as Int.toString())
                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:15:5: error: none of the following functions can be called with the arguments supplied: 
@InlineOnly public inline fun println(): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Any?): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Boolean): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Byte): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Char): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: CharArray): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Double): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Float): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Int): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Long): Unit defined in kotlin.io
@InlineOnly public inline fun println(message: Short): Unit defined in kotlin.io
    println("A(3, 4) = " + ackermann(3, 4) as Int.toString())
    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function.kt:15:51: error: unresolved reference: toString
    println("A(3, 4) = " + ackermann(3, 4) as Int.toString())
                                                  ^
